# snowflake-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gearman_worker.c  gid_worker.c  gidworker.c  snowflake.c  snowflake.h
